# QCircuitFaultEditor

./: CMakeLists.txt  README.MD  SimulatorConsole.pro  SimulatorConsole.sln
CircuitFaultEditor/: CircuitFaultEditor.vcxproj  CircuitFaultEditor.vcxproj.filters
CircuitFaultEditor/MainWindow/: circuitfaulteditor.cpp  circuitfaulteditor.h  ctcpserver.cpp  ctcpserver.h  dispatchservice.h  main.cpp
CircuitFaultEditor/Resources/: circuitfaulteditor.qrc  style.qss
CircuitFaultEditor/Resources/images/: apprc.rc
CircuitFaultEditor/Utils/: DBUtils.h
CircuitFaultEditor/WaveEditor/: arthurstyle.cpp  hoverpoints.h  shadewidget.cpp  shadewidget.h  tinyxml2.cpp  tinyxml2.h  waveseditor.h
CircuitFaultEditor/customCtrl/: ctableview.cpp  ctableview.h  customitemmodel.h  loginDlg.h  manual.cpp  msgbox.cpp  newsolutiondialog.cpp  newsolutiondialog.h  nofocusdelegate.cpp  wavesettings.cpp  wavesettings.h
src/controls/: ctableview.h  customitemmodel.cpp  custompushbutton.cpp  loginDlg.cpp  manual.h  msgbox.h  nofocusdelegate.h  recordeditor.cpp  recordeditor.h
src/editor/: arthurstyle.h  hoverpoints.cpp  waveseditor.cpp
src/main/: circuitfaulteditor.h  dispatchservice.cpp  main.cpp
src/resources/: circuitfaulteditor.qrc
src/utils/: DBUtils.cpp  DBUtils.h
